realise add order - add HomeModel, OrdersDbContext

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "OrdersConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=CRM-System;Trusted_Connection=True"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
