add authentication folder, admincontroller, login and register views

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "OrdersConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=CRM-System;Trusted_Connection=True"
+    "OrdersConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=CRM-System;Trusted_Connection=True",
+    "AppUsersConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=AppUsers;Trusted_Connection=True"
   },
 
   "Logging": {
