add static method CreateAdminAccount in Program.cs

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "AdminAccountData": {
+    "Login": "admin",
+    "Email": "admin@mail.ru",
+    "Password": "admin",
+    "Role": "admin"
+  },
+
   "ConnectionStrings": {
     "OrdersConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=CRM-System;Trusted_Connection=True",
     "AppUsersConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=AppUsers;Trusted_Connection=True"
