add edit method into home controller with defaultFieldValues.json

--- a/CRMSystem.csproj
+++ b/CRMSystem.csproj
@@ -29,6 +29,9 @@
     <Content Update="appsettings.Development.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Update="defaultFieldValues.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
