fix error, add default.json into wwwroot-folder and make deserialize in layout.cshtml, index page for admin is ready

--- a/CRMSystem.csproj
+++ b/CRMSystem.csproj
@@ -29,7 +29,7 @@
     <Content Update="appsettings.Development.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Update="defaultFieldValues.json">
+    <Content Update="wwwroot\files\default.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
